<resources>
    <string name="app_name">Cotizador</string>
    <string name="titulo">COTIZADOR</string>
    <string name="sexo">Sexo</string>
    <string name="tipo">Tipo</string>
    <string name="cantidad">Cantidad</string>
    <string name="marca">Marca</string>
    <string name="cotizar">Cotizar</string>
    <string name="limpiar">Limpiar</string>

    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="zapatilla">Zapatilla</string>
    <string name="clasico">Clásico</string>
    <string name="nike" translatable="false">Nike</string>
    <string name="adidas" translatable="false">Adidas</string>
    <string name="puma" translatable="false">Puma</string>

    <array name="opcSexo">
        <item>@string/hombre</item>
        <item>@string/mujer</item>
    </array>
    <array name="opcTipo">
        <item>@string/zapatilla</item>
        <item>@string/clasico</item>
    </array>
    <array name="opcMarca">
        <item>@string/nike</item>
        <item>@string/adidas</item>
        <item>@string/puma</item>
    </array>

    <string name="error">Debe ingresar una cantidad</string>
    <string name="error_dos">La cantidad debe ser superior a 0</string>
</resources>
